--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@ body {
   margin: 0;
 }
 .carousel {
-  width: 100vw;
-  height: 100vh;
   position: relative;
 }
 
@@ -17,13 +15,14 @@ ul {
   list-style: none;
   padding: 0;
   /* width: 400px; */
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 10px;
+  overflow: hidden;
 }
 
 .slide {
@@ -51,7 +50,7 @@ img {
   border: none;
   font-size: 50px;
   cursor: pointer;
-  top: 50%;
+  top: 70%;
 
   transform: translateY(-50%);
   color: rgb(0, 0, 0);
